2005-04-25  Christopher Faylor  <cgf@timesys.com>

	* mount.cc (mount_commands): Display "-X" option when appropriate.

2005-04-20  Brian Dessent  <brian@dessent.net>

	* utils.sgml (mount): Clarify setting cygdrive prefix for user
	and system-wide.

2005-03-24  Brian Dessent  <brian@dessent.net>

	* cygcheck.cc (init_paths): Use full path instead of "." for the
	current directory.  Do not add "." if present in $PATH.
	(dump_sysinfo): Skip placeholder first value of paths[].

2005-03-07  Christopher Faylor  <cgf@timesys.com>

	* kill.cc (getsig): Rectify bug introduced by 2005-02-26 change.  Don't
	pad signal name with spaces.

2005-03-07  Corinna Vinschen  <corinna@vinschen.de>

	* strace.cc (handle_output_debug_string): Fix compiler warning.

2005-03-06  Christopher Faylor  <cgf@timesys.com>

	* cygpath.cc (usage): Pass in one more copy of program_name to printf
	to avoid a SEGV.

2005-02-27  Christopher Faylor  <cgf@timesys.com>

	* regtool.cc (opts): The argument to 'K' is not optional.
	(main): Revert previous change.  Just let getopt deal with missing
	argument.

2005-02-27  Christopher Faylor  <cgf@timesys.com>

	* regtool.cc (main): Avoid a SEGV when nothing follows -K.

2005-02-26  Christopher Faylor  <cgf@timesys.com>

	* kill.cc (getsig): Avoid buffer overflow when generating a signal name.

	* strace.cc (handle_output_debug_string): Make error a little more specific.

2005-02-23  Joshua Daniel Franklin <joshuadfranklin@yahoo.com>

	* cygpath.cc (usage): Clarify help output to indicate acceptance
	of multiple file names as arguments.

2005-01-16  Christopher Faylor  <cgf@timesys.com>

	* ps.cc (main): Eliminate use of PID_ZOMBIE.
	* strace.cc (main): Recognize new option for displaying hex value of
	strace type.
	(handle_output_debug_string): Prepend output with hex value of strace
	message if -H is specified.

2005-01-11  Pierre Humblet <pierre.humblet@ieee.org>

	* mkpasswd.c (print_win_error): Transform into macro.